--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,5 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+    <name>Drew_Week_One(CLI)</name>
 </project>
